--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,12 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
 
               "node_modules/alertifyjs/build/css/alertify.min.css",
-              "node_modules/alertifyjs/build/css/themes/semantic.min.css"
+              "node_modules/alertifyjs/build/css/themes/semantic.min.css",
+              
+              "node_modules/ngx-spinner/animations/ball-zig-zag.css",
+              "node_modules/ngx-spinner/animations/ball-newton-cradle.css",
+              "node_modules/ngx-spinner/animations/cog.css"
+            
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
